[tool.poetry]
name = "unsent"
version = "0.25.1"
description = "Python SDK for the unsent API"
authors = ["unsent"]
license = "MIT"
readme = "README.md"
packages = [{ include = "unsent" }]
include = ["unsent/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.32.0"
typing_extensions = ">=4.7"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
